# forza-tool

./: LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
script/: sync_version.py
src/: App.css  App.scss  App.tsx  MultiPageApp.scss  MultiPageApp.tsx  MultiWindowApp.scss  MultiWindowApp.tsx  SinglePageApp.tsx  SingleWindowApp.tsx  index.css  ipc.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/common/: AppContext.ts  CapitalizeFirstLetter.ts  CircularBuffer.ts  Ipc.ts  MessageData.ts  MessageDataAnalysis.ts  Other.ts  Page.ts  QuickSearch.ts  SocketState.ts  SocketStatsToIcon.ts  UnitConvert.ts
src/hooks/: resize.ts
src/pages/: AirDragCoefficient.tsx  Control.tsx  Detail.tsx  Engine.tsx  ErrorMessage.tsx  Estimation.scss  Estimation.tsx  Motion.tsx  Network.tsx  PowerVerification.tsx  Settings.tsx  SpeedMeter.tsx  TIre.tsx  Tachometer.scss  Tachometer.tsx  WindResistance.tsx  index.tsx
src/pages/common/: Context.ts  Echarts.ts  NoXAxisInfoTooltip.tsx
src/pages/common/Echarts/: AngleAxis.ts  AreaStyle.ts  Aria.ts  Axis.ts  AxisPointer.ts  Brush.ts  Calendar.ts  DataZoom.ts  Dataset.ts  Geo.ts  Graphic.ts  Grid.ts  Legend.ts  LineStyle.ts  Name.ts  Parallel.ts  ParallelAxis.ts  Polar.ts  Radar.ts  RadiusAxis.ts  ShadowStyle.ts  SingleAxis.ts  StateAnimation.ts  TextStyle.ts  Timeline.ts  Title.ts  Toolbox.ts  Tooltip.ts  VisualMap.ts  common.ts  index.ts
test/: readme.md  test.py
(+24 files in other folders)
