[package]
name = "forza-tool"
version = "0.1.8"
description = "A Forza Telemetry App"
authors = ["johngu"]
license = "MIT"
repository = "https://github.com/JohnGu9/forza-tool"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4", features = [] }
tauri-plugin-log = "2.2"
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
tauri-plugin-window-state = "2.2"
