[package]
name = "forza-tool"
version = "0.1.9"
description = "A Forza Telemetry App"
authors = ["johngu"]
license = "MIT"
repository = "https://github.com/JohnGu9/forza-tool"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5", features = [] }
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
tauri-plugin-window-state = "2.2"
